# hof-project

./: README.md  pyproject.toml
data/: NLP.json  NLP_links.json
data/relations/: clustered.json  spacy.json
src/: clustering.py  neo4j_classes.py  neo4j_db.py  parse.py  spacy_application.py
