[tool.poetry]
name = "nlp-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "nlp_project"}]

[tool.poetry.dependencies]
python = "3.10.4"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.2"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
