[tool.poetry]
name = "nlp-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "nlp_project"}]

[tool.poetry.dependencies]
python = "3.10.4"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.2"
tqdm = "^4.64.1"
sentence-transformers = "^2.2.2"
scikit-learn = "^1.2.1"
transformers = "^4.26.0"
spacy = "^3.5.0"
neomodel = "^4.0.8"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
